--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -27,7 +27,7 @@
             <div>
                 <a href="{{ url_for('index') }}">Home</a>
                 <a href="#" id="view-predictions">View Predictions</a>
-                <div class="dropdown">
+                <!-- <div class="dropdown">
                     <a href="#">Select Region</a>
                     <div class="dropdown-content">
                         <a href="#" onclick="changeRegion('north')">North</a>
@@ -37,7 +37,7 @@
                         <a href="#" onclick="changeRegion('west')">West</a>
                         <a href="#" onclick="changeRegion('south')">South</a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         
