--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="col-md-8">
 <div class="air-quality-container">
     <!-- ส่วนแสดงสถานที่และอุณหภูมิ -->
     <div class="location-temperature">
@@ -129,6 +130,7 @@
             </tbody>
         </table>
     </div>
+</div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
