--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -33,10 +33,13 @@ header {
 
 
 h1 {
-    color: #accaf1; /* Light Almond */
+    color: #accaf1;
+    /* Light Almond */
 }
+
 h2 {
-    color: #accaf1; /* Light Almond */
+    color: #accaf1;
+    /* Light Almond */
 }
 
 
@@ -53,7 +56,7 @@ h2 {
     height: calc(100vh - 80px);
     z-index: 100;
     position: sticky;
-    
+
 }
 
 #map {
@@ -310,50 +313,67 @@ h2 {
 
 /* Modal styles */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1000; /* Sit on top */
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1000;
+    /* Sit on top */
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgba(0,0,0,0.8); /* Black w/ opacity */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgba(0, 0, 0, 0.8);
+    /* Black w/ opacity */
     padding-top: 4px;
 }
+
 .modal-content {
-    background-color: #333333; /* Deep Charcoal */
-    color: #888; /* Light Almond */
-    margin: 5% auto; /* 15% from the top and centered */
+    background-color: #333333;
+    /* Deep Charcoal */
+    color: #888;
+    /* Light Almond */
+    margin: 5% auto;
+    /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #fcfcfb;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 80%;
+    /* Could be more or less, depending on screen size */
     border-radius: 10px;
 }
+
 .close {
     color: #fcfcfb;
     float: right;
     font-size: 28px;
     font-weight: bold;
 }
+
 .close:hover,
 .close:focus {
     color: #ffffff;
     text-decoration: none;
     cursor: pointer;
 }
+
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* 2 คอลัมน์ */
+    grid-template-columns: repeat(2, 1fr);
+    /* 2 คอลัมน์ */
     gap: 8px;
 }
+
 .info-box {
-    background: #fcfcfb; /* Light Almond */
+    background: #fcfcfb;
+    /* Light Almond */
     padding: 0.05px;
     border-radius: 10px;
     text-align: center;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
+
 .value {
     font-size: 20px;
     font-weight: bold;
@@ -427,7 +447,8 @@ h2 {
     border-collapse: collapse;
 }
 
-.forecast-table th, .forecast-table td {
+.forecast-table th,
+.forecast-table td {
     padding: 10px;
     text-align: center;
     border: 1px solid #ddd;
@@ -469,4 +490,42 @@ h2 {
     font-size: 24px;
     color: #accaf1;
     margin-left: 10px;
+}
+
+.scrollable-container {
+    max-height: 600px;
+    /* Adjust the height as needed */
+    overflow-y: auto;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+.air-quality-container {
+    padding: 20px;
+}
+
+.location-temperature {
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.metric-card {
+    margin-bottom: 20px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.metric-icon {
+    margin-bottom: 10px;
+}
+
+.chart-legend .legend-color {
+    width: 20px;
+    height: 10px;
+    display: inline-block;
+    margin-right: 5px;
+    background-color: #4DD0E1;
 }
